# mpi_shared_memory_example

./: CMakeLists.txt  main.c  mpi_shared_memory_1d_array.c  mpi_shared_memory_2d_array.c  mpi_shared_memory_2d_array_v1.c  mpi_shared_memory_2d_array_v2.c  mpi_shared_memory_example.c
